[tool.poetry]
name = "c-c-k-learning-progress-tracker"
version = "0.1.0"
description = "Hyperskill Learning Progres Tracker project"
authors = ["c-c-k <c-c-k@nym.hush.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/c-c-k/learning-progress-tracker"
packages = [{include = "tracker"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pylint = "^2.17.2"

[tool.poetry.group.test.dependencies]
coverage = "^7.2.3"
pytest = "^7.3.1"

[tool.poetry.group.docs.dependencies]
Sphinx = "^6.1.3"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["tracker"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
